# discord-saver

./: Cargo.toml  Procfile  conversations.db
saver-bot/: .env  Cargo.toml
saver-bot/.cargo/: config.toml
saver-bot/src/: main.rs  old.rs
saver-site/: .env  Cargo.toml
saver-site/src/: main.rs
